@@ -1,3 +1,4 @@
+option('sodium', type: 'feature', description: 'libsodium bindings for Lua')
 option('pg', type: 'feature', description: 'PostgreSQL client for Lua')
 
 option('documentation', type: 'feature', description: 'Build documentation')
